# Hiring

Move/aave_aggregator-master/: Cargo.toml  README.md
Move/aave_aggregator-master/config/: client.toml  server.toml
Move/aave_aggregator-master/src/client/: main.rs
Move/aave_aggregator-master/src/lib/: polygon.rs
Move/aave_aggregator-master/src/server/: event.rs
Move/craft-main/: Cargo.toml  README.md
Move/craft-main/client/: Cargo.toml  build.rs
Move/craft-main/client/src/: main.rs
Move/craft-main/ec_snark/: Cargo.toml
Move/craft-main/ec_snark/src/: common.rs
Move/craft-main/ec_snark/src/protocol/elliptic_curves/: pallas.rs  vesta.rs
Move/craft-main/ec_snark/tests/: common.rs  pallas_functional_tests.rs
Move/craft-main/proto/: ec_auth.proto
Move/craft-main/server/src/: main.rs  service.rs
Move/craft-main/server/src/apis/: user.rs
Move/craft-main/server/src/apis/user_impl/: in_memory.rs
Move/move-pay-stream-main/: Move.toml  README.MD
Move/move-pay-stream-main/doc/: pay_stream.md  pay_stream_tests.md
Move/move-pay-stream-main/sources/: pay_stream.move  pay_stream_tests.move
Rust/aave_aggregator-master/src/client/: config.rs
Rust/aave_aggregator-master/src/lib/: coinbase.rs  mod.rs
Rust/aave_aggregator-master/src/server/: config.rs  main.rs  routes.rs  state.rs
Rust/craft-main/client/src/: logic.rs
Rust/craft-main/ec_snark/src/: lib.rs
Rust/craft-main/ec_snark/src/protocol/: constants.rs  mod.rs
Rust/craft-main/ec_snark/tests/: vesta_functional_tests.rs
Rust/craft-main/server/: Cargo.toml
Solidity/NFT-flashloan-exchange/: README.md
Solidity/NFT-flashloan-exchange/script/: NFTExchange.s.sol
Solidity/NFT-flashloan-exchange/src/: NFTExchange.sol
Solidity/NFT-flashloan-exchange/src/interfaces/: INFTExchange.sol  INFTFlashLoanReceiver.sol
Solidity/NFT-flashloan-exchange/test/: NFTExchange.t.sol
Solidity/NFT-flashloan-exchange/test/utils/: AirdropClaimer.sol  AirdropERC20.sol  BasicNFTFlashLoanReceiver.sol  ConnivingReceiver.sol  MaliciousNFTFlashLoanReceiver.sol  TestERC20.sol  TestNFT.sol
