[package]
name = "aave_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
# Async
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"]}
async-stream = "0.3.5"
futures = "0.3.28"
futures-util = "0.3.28"
parking_lot = "0.12.1"

# Config
config = "0.13.3"
dotenvy = "0.15.7"
lazy_static = "1.4.0"

# Crypto
ethers = {version = "2.0.10", features=["abigen", "ipc", "rustls", "ws"]}

# Data
url = {version = "2.4.1", features = ["serde"]}

# Serialization
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"

# Tracing
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"

# Web
axum = {version = "0.6.20", features = ["headers"]}
reqwest = "0.11.22"
tokio-tungstenite = {version = "0.20.1", features = ["native-tls"]}
sse-client = "1.1.1"

# Terminal
crossterm = "0.27.0"