[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tonic.workspace = true
structopt.workspace = true
strum.workspace = true
log.workspace = true
prost.workspace = true
prost-types.workspace = true
sha2.workspace = true
pasta_curves.workspace = true
ec_snark = { path = "../ec_snark"}

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion.workspace = true

